<resources>
    <string name="app_name">Othello</string>
    <string name="copyright">Copyright ⓒ 2015 - 2019 Norbert Papke</string>

    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="undo">Undo</string>

    <string name="pref_parallel">Parallel Minimax</string>
    <string name="pref_parallel_summ">Use the experimental multi-threaded algorithm</string>
    <string name="pref_strategy">Strategy</string>
    <string name="pref_strategys_default">Adaptive</string>
    <string name="settings_label">Othello Settings</string>
    <string name="pref_lookaheads_default">4</string>
    <string name="pref_lookahead">Look this many moves ahead</string>
    <string name="pref_iscomputer_summ">Enable the computer player</string>
    <string name="pref_iscomputer">Computer player</string>
    <string name="player_pref_instruction">Configure player</string>
    <string name="action_about">About</string>
    <string name="about_title">About Othello</string>
    <string name="about_text">The board game Othello also known as Reversi. This software is released under GPLv3.
    </string>
    <string name="action_help">Help</string>
    <string name="help_url">https://en.wikipedia.org/wiki/Reversi</string>
    <string name="action_exit">Exit</string>

    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="pref_isoverlay_analysis_summ">Show analysis overlay</string>
    <string name="pref_isoverlay_analysis">Overlay</string>
    <string name="pref_max_time">Turns take at most this long in seconds</string>
    <string name="pref_min_time">Turns take at least this long in seconds</string>
    <string name="pref_max_time_default">5</string>
    <string name="pref_min_time_default">0</string>
    <string name="pref_delay_time">Delay initial notification in seconds</string>
    <string name="pref_delay_time_default">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">Hint</string>

</resources>
