<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_lookahead"
        android:title="@string/pref_lookahead"
        android:dialogTitle="@string/pref_lookahead"
        android:entries="@array/pref_lookaheads_entries"
        android:entryValues="@array/pref_lookaheads_values"
        android:defaultValue="@string/pref_lookaheads_default" />
    <ListPreference
        android:key="pref_strategy"
        android:title="@string/pref_strategy"
        android:dialogTitle="@string/pref_strategy"
        android:entries="@array/pref_strategys_entries"
        android:entryValues="@array/pref_strategys_values"
        android:defaultValue="@string/pref_strategys_default" />
    <CheckBoxPreference
        android:key="pref_parallel"
        android:title="@string/pref_parallel"
        android:summary="@string/pref_parallel_summ"
        android:defaultValue="true" />
</PreferenceScreen>
